[Enhancement #231] Refactor original generation on new object persist to support non-empty collection attributes.